Correction de bug

--- a/Exemple.ipynb
+++ b/Exemple.ipynb
@@ -167,7 +167,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Library\n",
+      "Library\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "numpy\n",
       "Delaunay\n",
       "matplotlib.pyplot\n"
@@ -234,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -316,92 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def Scale_triangle_2d(vertex,std_List,ax1,ax2,halfBoxSize):\n",
-    "    \"\"\"\n",
-    "    def Scale_triangle_2d(vertex,std_List,ax1,ax2,halfBoxSize):\n",
-    "    \n",
-    "    this function scale the triangle's vertex to be projected. First std_list is use again to scale each coordinate to his true value. Then halfBoxSize is used such as all particle between [-halfBoxSize,halfBoxSize] is between [-1,1] to be prjected by pyOpenGl.\n",
-    "    The image will include particle with coordinate in [-halfBoxSize,halfBoxSize].\n",
-    "    input:\n",
-    "        - vertex : list of vertex of the projected triangle. List of 2 dimensional array\n",
-    "        - std_List : List [std_x,std_y,std_z,std_vx,std_vy,std_vz] compute by compute_std(nb)\n",
-    "        - ax1 : axe of x coordinate of the image\n",
-    "        - ax2 : axe of y coordinate of the image\n",
-    "        - halfBoxSize : the half of the boxSize of the image (in Unit of the simulation)\n",
-    "    return:\n",
-    "        - List of vertex scale by halfBoxSize from the original value in the simulation\n",
-    "    \"\"\"\n",
-    "    #print(\"Scale_triangle_2d\")\n",
-    "    for ii in range(len(vertex)):\n",
-    "        vertex[ii][0] = vertex[ii][0]/halfBoxSize*std_List[ax1]\n",
-    "        vertex[ii][1] = vertex[ii][1]/halfBoxSize*std_List[ax2]\n",
-    "    return vertex\n",
-    "\n",
-    "def projection_6d_to_2d(tri,id_list,ax1,ax2):\n",
-    "    \"\"\"\n",
-    "    def projection_6d_to_2d(tri,id_list,ax1,ax2):\n",
-    "    \n",
-    "        fonction to compute the projection\n",
-    "\n",
-    "    input: \n",
-    "        - tri : Delaunay triangulation of the image frame\n",
-    "        - id_list : id_list of the simplices in the concave refinement obtain with concaveDelaunayRefinement.py\n",
-    "        - ax1 : axe of x coordinate of the image\n",
-    "        - ax2 : axe of y coordinate of the image\n",
-    "    return:\n",
-    "        - tri2d_list: List of Delaunay triangulation in two dimension. The triangle of the triangulation are the triangle to display\n",
-    "        - for each triangle, a parameter alpha (matrix of float) representing it's intensity (abitrary unit). (it's a matrix alpha[trianglulation][triangle of the triangulation])\n",
-    "    \"\"\"\n",
-    "    print(\"projection_6d_to_2d\")\n",
-    "    tri2d_list = []\n",
-    "    alpha_list = []\n",
-    "    jj=0\n",
-    "    n=len(id_list)\n",
-    "    for ii in id_list:\n",
-    "        jj=jj+1\n",
-    "        V = Tetrahedron6DVolume(tri.points[tri.simplices[ii]])\n",
-    "        w2d = simplex_projection2d(tri.points[tri.simplices[ii]],ax1,ax2)\n",
-    "        tri2d = Delaunay(w2d)\n",
-    "        V2d_ListSimplices = delaunay_volume(tri2d)\n",
-    "        V2d = np.sum(V2d_ListSimplices)\n",
-    "        for ii in range(len(V2d_ListSimplices)):\n",
-    "            V2d_ListSimplices[ii] = V/V2d\n",
-    "        alpha = V2d_ListSimplices\n",
-    "        tri2d_list.append(tri2d)\n",
-    "        alpha_list.append(alpha)\n",
-    "    return tri2d_list,alpha_list\n",
-    "\n",
-    "def VertexList2d(tri,std_List,id_list,ax1,ax2,halfBoxSize):\n",
-    "    \"\"\"\n",
-    "    input: \n",
-    "        - tri : Delaunay triangulation of the image frame\n",
-    "        - id_list : id_list of the simplices in the concave refinement obtain with concaveDelaunayRefinement.py\n",
-    "        - ax1 : axe of x coordinate of the image\n",
-    "        - ax2 : axe of y coordinate of the image\n",
-    "        - halfBoxSize: the image will contain particle in [-halfBoxSize,halfBoxSize]\n",
-    "    return:\n",
-    "        - triangle_List: List of triangle (three two-dimensonal array) to display\n",
-    "        - for each triangle, a parameter alpha (float) representing it's intensity (abitrary unit)\n",
-    "    \"\"\"\n",
-    "    print(\"vertexList2d\")\n",
-    "    triangle_List = []\n",
-    "    alpha = []\n",
-    "    tri2d_list,alpha_list = projection_6d_to_2d(tri,id_list,ax1,ax2)\n",
-    "    for ii in range(len(tri2d_list)):\n",
-    "        for jj in range(len(tri2d_list[ii].simplices)):\n",
-    "            vertices = tri2d_list[ii].points[tri2d_list[ii].simplices[jj]]\n",
-    "            triangle_List = [*triangle_List,*Scale_triangle_2d(vertices,std_List,ax1,ax2,halfBoxSize)]\n",
-    "            alpha.append(alpha_list[ii][jj])\n",
-    "    return triangle_List,alpha"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -413,22 +341,14 @@
       "DEBBUG :: cell creation\n",
       "flag=0\n",
       "DEBUG : Concave Delaunay Algorithm\n",
-      "DV/V = 1.671577891444908%\n",
+      "DV/V = 0.3429524422101256%\n",
       "0\n",
       "vertexList2d\n",
-      "projection_6d_to_2d\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 35\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m flag\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m---> 35\u001b[0m     tmp,opa \u001b[38;5;241m=\u001b[39m \u001b[43mVertexList2d\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtri\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstd_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43mindex_List\u001b[49m\u001b[43m,\u001b[49m\u001b[43maxe1\u001b[49m\u001b[43m,\u001b[49m\u001b[43maxe2\u001b[49m\u001b[43m,\u001b[49m\u001b[43mhalfBoxSize\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     37\u001b[0m     opa \u001b[38;5;241m=\u001b[39m opa\u001b[38;5;241m/\u001b[39mV_cons\n",
-      "Cell \u001b[0;32mIn[13], line 76\u001b[0m, in \u001b[0;36mVertexList2d\u001b[0;34m(tri, std_List, id_list, ax1, ax2, halfBoxSize)\u001b[0m\n\u001b[1;32m     74\u001b[0m         vertices \u001b[38;5;241m=\u001b[39m tri2d_list[ii]\u001b[38;5;241m.\u001b[39mpoints[tri2d_list[ii]\u001b[38;5;241m.\u001b[39msimplices[jj]]\n\u001b[1;32m     75\u001b[0m         triangle_List \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m*\u001b[39mtriangle_List,\u001b[38;5;241m*\u001b[39mScale_triangle_2d(vertices,std_List,ax1,ax2,halfBoxSize)]\n\u001b[0;32m---> 76\u001b[0m         alpha\u001b[38;5;241m.\u001b[39mappend(alpha_list[ii][jj])\n\u001b[1;32m     77\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m triangle_List,alpha\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "projection_6d_to_2d\n",
+      "1\n",
+      "number of triangle :: 19839\n",
+      "The variable \"data\" has been saved successfully. \n",
+      " File name :: /home/astro/ggsalami/ggsalami/TP4b/ConcaveDelaunayMockImage/saveVariable/triangle/Partial_Image_1_data.pickle\n"
      ]
     }
    ],
@@ -476,7 +396,7 @@
     "        if flag==1:\n",
     "            # code to add light in an other way\n",
     "            print('flag=1')\n",
-    "    \"\"\"\n",
+    "    \n",
     "    print(f'number of triangle :: {len(triangle_List)}')\n",
     "    name = f'Partial_Image_{parameter_a}'\n",
     "\n",
@@ -490,7 +410,7 @@
     "        # Serialize and write the variable to the file\n",
     "        pickle.dump(data, file)\n",
     "\n",
-    "    print(f'The variable \"data\" has been saved successfully. \\n File name :: {file_path_data}')\"\"\""
+    "    print(f'The variable \"data\" has been saved successfully. \\n File name :: {file_path_data}')"
    ]
   },
   {
